css/modern-business.css
/* 
Custom CSS for...
'Modern Business' HTML Theme by Start Bootstrap

All Start Bootstrap themes are licensed under Apache 2.0. 
For more info and more free Bootstrap 3 HTML themes, visit http://startbootstrap.com!
*/

/* Global Styles */

html, body {
  height:100%;
}

.carousel-inner {
    overflow: visible !important;
  }

body {
  /*padding-top: 40px;  body padding for fixed top nav */
}

.img-home-portfolio,
.img-customer,
.portfolio-item {
  margin-bottom: 30px;
}

.tab-pane {
  margin-top: 15px;
}

/* Page Sections */
.section,
.section-colored {
  padding: 50px 0;
}

.section-colored {
  background-color: #e1e1e1; /* change this to change the background color of a colored section */
}

.sidebar {
  margin-top: 40px;
}

.sidebar ul {
  border-radius: 5px;
  padding: 5px;
  border: 1px solid #cccccc;
}

/* Half Page Height Carousel Customization */
.carousel{
   margin: 5% 0%;
}
.item,
.active,
.carousel-inner {
  height: 100%;
}

.fill {
  width: 100%;
  height: 100%;
  background-position: center;
  background-size: cover;
}

/* Social Icons Styles */
.list-social-icons {
  margin-bottom: 45px;
}

.tooltip-social a {
  text-decoration: none;
  color: inherit;
}

.facebook-link a:hover {
  color: #E1E1E1;
}

.linkedin-link a:hover {
  color: #E1E1E1;
}

.twitter-link a:hover {
  color: #E1E1E1;
}

.google-plus-link a:hover {
  color: #E1E1E1;
}

/* Service Page Styles */
.service-icon {
  font-size: 50px;
}

/* 404 Page Styles */
.error-404 {
  font-size: 8em;
}

/* Pricing Page Styles */
.price {
  font-size: 4em;
}

.price-cents {
  vertical-align: super;
  font-size: 50%;
}

.price-month {
  font-size: 35%;
  font-style: italic;
}

/* Footer Styles */
footer {
  margin: 50px 0;
}

/* Responsive Styles */
@media (max-width: 767px) {

.carousel {
  height: 70%; /* increases the carousel height so it looks good on phones */
}

}

